fixing swagger issues.4
